--- a/indice-inflabr/base.css
+++ b/indice-inflabr/base.css
@@ -9,7 +9,7 @@ div.page{
     border: 1px solid;
     margin: 0 25%;
     width: 50%;
-    height: 900px;
+    height: 600px;
 
 }
 
@@ -21,7 +21,7 @@ div.content{
 
 header{
 
-/* Vazio no html*/
+    /* Vazio no html*/
 
 }
 
@@ -36,18 +36,79 @@ fieldset{
     background: lightgrey;
 }
 
-fieldset#index-name{
-
-}
-
-fieldset#main-fields{
-
-}
-
 h1{
+    text-align: center;
+}
+
+ul {
+
+    list-style: none;
+
+}
+
+ul#firlist label{
+
+    text-align: left;
+    border: none;
+    display: inline;
     
 }
 
-ul li{
+ul#firlist {
+
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    border: 1px solid whitesmoke;
+    
+    
+}
+
+ul#firlist li{
+
+    display: inline;
+
+}
+
+label{
+
+    display: inline-block;
+    text-align: right;
+    width: 35%;
+    border:  none;
+}
+
+ul#seclist{
+
+    border: none;
+
+}
+
+ul#seclist li{
+
+    padding: 3px;
+    border: none;
+   
+    
+}
+
+ul#seclist label{
+
+    border: none;
+    width-left: 10%;
+}
+
+ul#seclist input{
+
+    border: none;
+}
+
+#button{
+
+    margin: none;
+    padding: none;
+    margin: auto 41%;
+    border: none;
+    text-align: center;
 
 }
